--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "esm-app",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "jest": "^29.5.0"
